@@ -28,7 +28,7 @@ Décoder les mnémoniques spéciales.
 .BR \-f ", "\-\-file
 Afficher l'en-tête du fichier.
 .TP
-.BR \-? ", " \-h ", " \-\-help
+.BR \-h ", " \-\-help
 Afficher un message d'utilisation et quitter.
 .TP
 .BR \-n ", "\-\-no\-names
