@@ -34,7 +34,7 @@ Fill unused unprotected program memory with value.  The value supercedes the
 linker script fill value.  The value must not be greater than 0xffff.  The
 value is hex.  The value may be preceeded by "0x".
 .TP
-.BR \-? ", " \-h ", " \-\-help
+.BR \-h ", " \-\-help
 Show the usage message and exit.
 .TP
 .BR "\-I DIR" , " \-\-include DIR
