@@ -30,7 +30,7 @@ Display source listing.
 .BR \-m ", "\-\-message
 Display debug message area.
 .TP
-.BR \-? ", " \-h ", " \-\-help
+.BR \-h ", " \-\-help
 Show the usage message and exit.
 .TP
 .BR \-r ", "\-\-rom
